# dew

./: .gitignore  README.md  grammar.bnf  pyproject.toml  setup.py
dew/: __init__.py  error.py  parser.py  types.py  utils.py
dew/ext/command/: __init__.py
dew/ext/command/decorators/: __init__.py
examples/: declaring_commands.py  readme.py
tests/: test_parse.py
