[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
requires-python = ">=3.10,<3.13"
name = "dew-py"
description= "A simple command language inspired from discord slash commands"
dynamic = ["version", "readme"]
authors = [
    {name = "jma"},
]
dependencies = [
    "typing_extensions==4.15.0"
]


[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "tox==4.28.4",
]


[tool.setuptools.dynamic]
version = {attr = "dew.__version__"} 
readme = {file = "README.md", content-type = "text/markdown"}

[tool.tox]
requires = ["tox>=4"]
env_list = ["format", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "run unit tests"
deps = [
    "pytest>=8",
    "pytest-sugar"
]

commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]